--- a/requirements.txt
+++ b/requirements.txt
@@ -19,8 +19,6 @@ multidict==6.0.4
 mypy-extensions==1.0.0
 numpy==1.26.0
 packaging==23.2
-pydantic==2.5.2
-pydantic_core==2.14.5
 python-dotenv==1.0.0
 PyYAML==6.0.2
 requests==2.32.3
@@ -44,3 +42,4 @@ markitdown[pdf,docx,xlsx,xls,pptx]
 paddlepaddle==3.1.0
 paddleocr==3.1.0
 onnxocr==2025.5
+ollama==0.5.2
