Update Ollama and Qwen2.5-VL

--- a/.env
+++ b/.env
@@ -4,4 +4,8 @@ STORAGE_PATH=storage
 # Image/PDF OCR Engine(default|qwenvl|onnxocr|paddleocr)
 OCR_ENGINE=qwenvl
 
+# QwenVL Ollama (OCR Engine=qwenvl)
+QWEN_VL_OLLAMA_URL=http://127.0.0.1:11434
+QWEN_VL_MODEL=qwen2.5vl:latest
+
 
