--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
 # STORAGE
 STORAGE_PATH=storage
 
-# Image/PDF OCR Engine(default|qwenvl|onnxocr|paddleocr)
-OCR_ENGINE=qwenvl
+# Image|PDF OCR Engine(qwenvl|paddleonnxocr)
+OCR_ENGINE=paddleonnxocr
 
-# QwenVL Ollama (OCR Engine=qwenvl)
+# Ollama QwenVL  (OCR Engine=qwenvl)
 QWEN_VL_OLLAMA_URL=http://127.0.0.1:11434
 QWEN_VL_MODEL=qwen2.5vl:latest
 
