--- a/.env
+++ b/.env
@@ -4,11 +4,11 @@ STORAGE_PATH=storage
 # Image|PDF OCR Engine(qwenvl_ollama|qwenvl_bailian|paddleonnxocr)
 OCR_ENGINE=paddleonnxocr
 
-# Ollama QwenVL  (OCR Engine=qwenvl)
+# Ollama QwenVL  (OCR Engine=qwenvl) Optional
 QWEN_VL_OLLAMA_URL=http://127.0.0.1:11434
 QWEN_VL_MODEL=qwen2.5vl:latest
 
-# Bailian QwenVL (OCR Engine=qwenvl_bailian)
+# Bailian QwenVL (OCR Engine=qwenvl_bailian) Optional
 QWEN_VL_BAILIAN_BASE_URL=https://dashscope.aliyuncs.com/compatible-mode/v1
 QWEN_VL_BAILIAN_API_KEY=sk-xxx
 QWEN_VL_BAILIAN_MODEL=qwen2.5-vl-7b-instruct
