Update .env key to QWEN_VL_OLLAMA_MODEL

--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ OCR_ENGINE=paddleonnxocr
 
 # Ollama QwenVL  (OCR Engine=qwenvl) Optional
 QWEN_VL_OLLAMA_URL=http://127.0.0.1:11434
-QWEN_VL_MODEL=qwen2.5vl:latest
+QWEN_VL_OLLAMA_MODEL=qwen2.5vl:latest
 
 # Bailian QwenVL (OCR Engine=qwenvl_bailian) Optional
 QWEN_VL_BAILIAN_BASE_URL=https://dashscope.aliyuncs.com/compatible-mode/v1
